fixed issue on mobile related to word breaking

--- a/sites/all/themes/prevsol/scss/_overrides.scss
+++ b/sites/all/themes/prevsol/scss/_overrides.scss
@@ -891,6 +891,14 @@ body.path-frontpage {
   }
 }
 
+.field--name-body {
+  p {
+    a {
+      word-break: break-all; 
+    }
+  }
+}
+
 .bottom-section-wrapper {
   margin-bottom: 6rem;
   padding-left: 6rem;
